<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAppearance="?android:attr/textAppearanceMedium" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_wod_type_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_wod_spinner_type" />

        <Spinner
            android:id="@+id/edit_wod_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_wod_Timed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/edit_wod_Timed_time_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timed_time_units" />

        <EditText
            android:id="@+id/edit_wod_Timed_Type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/timed_type_hint"
            android:inputType="textCapWords|textAutoCorrect" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_wod_weightonly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isweight" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_Timed_Rounds_Completed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds_finished" />

        <EditText
            android:id="@+id/edit_Timed_Rounds_Completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789." 
            android:hint="3, 5, 7.2, 8.1,etc."
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_wod_Rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/edit_wod_Rounds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_wod_staggered_rounds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staggered_rounds_text" />

        <EditText
            android:id="@+id/edit_wod_staggered_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:hint="21-15-9, etc."
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_Rounds_Time_Completed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_completed_text" />

        <EditText
            android:id="@+id/edit_Rounds_Time_Completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="HH:MM:SS"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_wod_named"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wod_named_text" />

        <EditText
            android:id="@+id/edit_wod_named_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Named/Hero workout name"
            android:inputType="textCapSentences|textAutoCorrect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_comments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_text" />

        <EditText
            android:id="@+id/edit_wod_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
            android:isScrollContainer="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>