<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="7dip"
    android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
    android:paddingTop="7dip"
    android:textAlignment="viewStart"
    android:textStyle="bold" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/container_staggered_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/container_staggered_rounds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dip"
            android:text="@string/rounds_text"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/container_staggered_time_finished_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished_in"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/container_staggered_time_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/container_staggered_named_workout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/named_workout_text"
            android:textStyle="normal" /> 
        
        <TextView
            android:id="@+id/container_staggered_named_workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/container_staggered_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="normal" />

</LinearLayout>